[package]
name = "pg_linearAlgebra"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["pg14"]
pg11 = ["pgrx/pg11", "pgrx-tests/pg11" ]
pg12 = ["pgrx/pg12", "pgrx-tests/pg12" ]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13" ]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14" ]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15" ]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16" ]
pg_test = []

[dependencies]
pgrx = "0.10.2"
openblas-src = "0.10"
cblas-sys = "0.1.4"
ndarray = "0.15"
rand = "0.8"
ndarray-rand = "0.13"
ndarray-linalg = "0.16.0"
rust-blas = "0.2.0"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
clang-sys = { version = "1.0.0", optional = true }
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
libc = "0.2"


[dev-dependencies]
pgrx-tests = "=0.10.2"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
